Fix form title alignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -53,6 +53,7 @@ a {
 .user-forms h2 {
   font-size: 1.5rem;
   font-weight: 500;
+  text-align: center;
 }
 
 .field {
